Fix: Too much gap

--- a/acf-image-select.css
+++ b/acf-image-select.css
@@ -20,6 +20,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 /* Container and image */
